force-app/main/default/objects/Site__c/Site__c.object-meta.xml
<CustomObject>
    <description>Portal custom object for the different views/subsites on portal i.e. Family Volunteer Corporate Volunteer</description>
    <label>Site</label>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>