force-app/main/default/objects/Site__c/fields/Contact_Access_Field__c.field-meta.xml
<CustomField>
    <fullName>Contact_Access_Field__c</fullName>
    <label>Contact Access Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>