force-app/main/default/objects/Site__c/fields/Default_Page__c.field-meta.xml
<CustomField>
    <fullName>Default_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Page</label>
    <referenceTo>Page__c</referenceTo>
    <relationshipLabel>Sites</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>