force-app/main/default/objects/Site__c/fields/Required_Permission_Set__c.field-meta.xml
<CustomField>
    <fullName>Required_Permission_Set__c</fullName>
    <label>Required Permission Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>