force-app/main/default/objects/Site__c/fields/Site_URL__c.field-meta.xml
<CustomField>
    <fullName>Site_URL__c</fullName>
    <label>Site URL</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>