force-app/main/default/objects/Site__c/fields/Site_URL_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_URL_Name__c</fullName>
    <label>Community URL Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>