force-app/main/default/objects/Site__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Default_Page__c</columns>
    <columns>Contact_Access_Field__c</columns>
    <columns>Site_URL_Name__c</columns>
    <columns>Required_Permission_Set__c</columns>
    <columns>Site_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>